fix navbar scroll an wrong padding

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -2,6 +2,11 @@ body {
     background-color: #f5f5f5;
 }
 
+.navbar {
+    background-color: #f55d3e;
+    height: 3em;
+}
+
 .navbar-nav a {
     font-family: 'Inter', sans-serif;
 }
